    - Lowered medic turret warmup to be 100 ticks
    - Increased medic turret cooldown to 1340 ticks
    - Decreased medic turret health per action to 200
    - Doubled medic turret cloud action cooldown to 60
    - Increased medic ammo magazine size to 25
  Bugfixes:
    - Fixed bullet trials compatibility (WarStalkerR)

---------------------------------------------------------------------------------------------------
Version: 0.18.3
Date: 22. 3. 2020
  Tweaks:
    - Reverted mending gate/wall cloud durations

---------------------------------------------------------------------------------------------------
Version: 0.18.2
Date: 22. 3. 2020
  Tweaks:
    - Fixed oil burner pollution amount being lower than vanilla boiler (35 pollution/m)
    - Updated cloud animation
    - Increased all cloud durations to be more inline with vanilla poison capsule duration
    - Changed the incendiary artillery to create fire in general area without targets needed
    - Moved tank turret forward on adv and nuclear tanks
  Bugfixes:
    - Tank not loading in factorio 0.18.16 (YenRaven)

---------------------------------------------------------------------------------------------------
Version: 0.18.1
Date: 13. 3. 2020
  Tweaks:
    - Changed mortar and capsule launcher projectile graphic
    - Show wall and gate resistances
  Bugfixes:
    - Fixed minigun firing while not being in range
    - Defender and destroyer launcher ammo no longer follows player
    - Reduced mortar bonus damage to 25%
    - Fixed launcher ammo tooltips
    - advanced and nuclear vehicles not being immune to rocks
    - adjusted vehicle volume to vanilla levels
    - Fixed vehicle weapon icons
    - Fixed vehicle on damage effects
    - Fixed wall and gate on damage effects
    - Fixed artillery scorchmark to big version

---------------------------------------------------------------------------------------------------
Version: 0.18.0
Date: 2. 2. 2020
  Improvements: